<resources>
    <string name="app_name">TravelShare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Register">Register now</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="action_sign_up">Sign Up!</string>
    <string name="site_here">yoursite.com!</string>
    <string name="here_too">And here too.</string>
    <string name="bio_info">Your bio goes here..</string>
    <string name="your_name">Your Name</string>
    <string name="edit_prof">EDIT PROFILE</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="posts">posts</string>
    <string name="followers_c">6530</string>
    <string name="following_c">217</string>
    <string name="posts_c">3431</string>
    <string name="first_n">Name</string>
    <string name="ph_num">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repass">Retype Password</string>
    <string name="blink_app">Blink: Better Affiliate Links</string>
    <string name="app_dev_name">Squibner LLC</string>
    <string name="exit_str">Exit</string>
    <string name="slogan">Why wait for days when your package can shift in hours!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
